--- a/reactive-forms/scss/components/editor.scss
+++ b/reactive-forms/scss/components/editor.scss
@@ -72,3 +72,35 @@
 .select2-container .select2-selection--multiple .select2-selection__rendered {
   margin-left: 0;
 }
+.select2-dropdown {
+  border: 1px solid var(--border-color);
+  background: var(--darkened-bg);
+}
+.select2-container--default .select2-search--dropdown .select2-search__field {
+  border: 1px solid var(--border-color);
+  background: var(--body-bg);
+  color: var(--body-fg);
+}
+.select2-container--default .select2-results__option--selected{
+  background: var(--selected-bg);
+}
+.select2-container--default .select2-selection--single{
+  border: 1px solid var(--border-color);
+  background: var(--body-bg);
+  color: var(--body-fg);
+}
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+  color: var(--body-fg);
+}
+.structured-field-editor button.select2-selection__clear {
+  color: var(--body-fg);
+}
+.select2-container--default .select2-selection--multiple .select2-selection__choice{
+  background: var(--darkened-bg);
+  color: var(--body-fg);
+}
+.select2-container--default .select2-selection--multiple{
+  border: 1px solid var(--border-color);
+  background-color: var(--body-bg);
+  color: var(--body-fg);
+}
