--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -4,3 +4,9 @@
     --vp-c-accent-hover: #cc3151;
     --vp-c-accent-soft: rgb(230 55 90 / 16%);
 }
+
+.vp-hero-action-button.secondary:hover {
+    // This fixes the hover color of the secondary button
+    background-color: var(--vp-c-accent-soft);
+    color: var(--vp-c-accent);
+}
